--- a/api_definition/coepi_api_0.3.0.yml
+++ b/api_definition/coepi_api_0.3.0.yml
@@ -77,7 +77,7 @@ paths:
       x-amazon-apigateway-integration:
         type: aws_proxy
         uri: ${lambda_invoke_arn}
-        httpMethod: GET
+        httpMethod: POST
 
       responses:
         '200':
